[project]
name = "paper2code"
version = "0.1.0"
description = "Paper2Code - transform papers into runnable code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.18.0",
    "telethon>=1.30.3",
    "requests>=2.28.0"
]

[project.optional-dependencies]
dev = ["debugpy==1.8.8"]
